// Microservice nodes

syntax = "proto3";
package edgeproto;

import "annotations.proto";
import "cloudlet.proto";
import "gogo.proto";
import "protogen.proto";
import "protocmd.proto";

// NodeType defines the type of Node
enum NodeType {
  // Unknown
  NodeUnknown = 0;
  // Distributed Matching Engine
  NodeDME = 1;
  // Cloudlet Resource Manager
  NodeCRM = 2;
}

// NodeKey uniquely identifies a DME or CRM node
message NodeKey {
  // Name or hostname of node
  string name = 1 [(protocmd.hidetag) = "nocmp"];
  // Node type
  NodeType node_type = 2;
  // Cloudlet on which node is running, or is associated with
  CloudletKey cloudlet_key = 3 [(gogoproto.nullable) = false];
  option (protogen.generate_matches) = true;
  option (protogen.obj_key) = true;
  option (gogoproto.gostring) = true;
}

// Node defines a DME (distributed matching engine) or CRM (cloudlet resource manager) instance.
message Node {
  // Fields are used for the Update API to specify which fields to apply
  repeated string fields = 1;
  // Unique identifier key
  NodeKey key = 2 [(gogoproto.nullable) = false];
  // Id of client assigned by server (internal use only)
  int64 notify_id = 3 [(protogen.backend) = true, (protocmd.hidetag) = "nocmp"];
  option (protogen.generate_matches) = true;
  option (protogen.generate_cud) = true;
  option (protogen.generate_cache) = true;
  option (protogen.notify_cache) = true;
}

service NodeApi {
  // Show Nodes connected locally only
  rpc ShowNodeLocal(Node) returns (stream Node) {
    option (google.api.http) = {
      post: "/show/nodelocal"
      body: "*"
    };
  }
  // Show all Nodes connected to all Controllers
  rpc ShowNode(Node) returns (stream Node) {
    option (google.api.http) = {
      post: "/show/node"
      body: "*"
    };
  }
}
